--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,7 @@
 # Site settings
 title: kiho's blog
 email: syspro86@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description:
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://syspro86.github.io" # the base hostname & protocol for your site
 twitter_username: 
