--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: kiho's blog
 email: syspro86@gmail.com
 description:
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://syspro86.github.io" # the base hostname & protocol for your site
 twitter_username: 
 github_username: syspro86
