--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,13 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: kiho's blog
 email: syspro86@gmail.com
 description:
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://zsoo.net" # the base hostname & protocol for your site
-twitter_username: 
+url: "http://zsoo.net"
+#twitter_username:
 github_username: syspro86
 
 # Build settings
 markdown: kramdown
-
-#theme: jekyll-theme-cayman
 
 disqus_url: syspro86.disqus.com
 disqus_id: syspro86
@@ -25,8 +15,10 @@ disqus_id: syspro86
 permalink: /post/:year-:month-:day-:title.html
 timezone: "Asia/Seoul"
 
-sass:
-  sass_dir: _sass
-  style: compressed
+#sass:
+#  sass_dir: _sass
+#  style: compressed
 
-theme: jekyll-theme-leap-day
+remote_theme: pages-themes/primer
+plugins:
+  - jekyll-remote-theme
